Building with only java